Rattrapage de la solution solution11bis